CPG-DEV/src/objects/CustomerMeetingReportOpp__c.object
<CustomObject>
    <fields>
        <fullName>Business__c</fullName>
        <formula>Opportunity__r.BusinessAlias__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomerMeetingReport__c</fullName>
        <label>Customer Meeting Report</label>
        <referenceTo>CustomerMeetingReport__c</referenceTo>
        <relationshipLabel>CMR Opportunities</relationshipLabel>
        <relationshipName>Customer_Meeting_Report_Opps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityName__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Meeting Report Opps</relationshipLabel>
        <relationshipName>Customer_Meeting_Report_Opps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <label>Customer Meeting Report Opp</label>
    <nameField>
        <displayFormat>CMROpp{000000}</displayFormat>
        <label>Customer Meeting Report Opp Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Meeting Report Opps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>